feat: expose oidc and mcp discovery

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ PORT=3000
 # Google OAuth credentials
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+# OIDC / MCP configuration
+OIDC_LOGIN_PATH=/login
+OIDC_CONSENT_PATH=/consent
+MCP_RESOURCE=http://localhost:3000
