--- a/.github/workflows/discovery-smoke.yml
+++ b/.github/workflows/discovery-smoke.yml
@@ -27,26 +27,35 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Run migrations
+        run: pnpm auth:migrate
+
       - name: Build
         run: pnpm build
 
-      - name: Start server
-        run: node dist/server.js &
-
-      - name: Wait for server
+      - name: Run discovery smoke check
         run: |
+          set -euo pipefail
+
+          node dist/server.js &
+          server_pid=$!
+          trap "kill $server_pid >/dev/null 2>&1 || true" EXIT
+
           for i in {1..30}; do
             if curl -sf "${BETTER_AUTH_URL}/healthz" >/dev/null; then
-              exit 0
+              server_ready=1
+              break
+            fi
+            if ! kill -0 "$server_pid" 2>/dev/null; then
+              echo "Server process exited before becoming healthy" >&2
+              exit 1
             fi
             sleep 1
           done
-          echo "Server did not start in time" >&2
-          exit 1
 
-      - name: Run discovery smoke check
-        run: pnpm smoke:discovery
+          if [ "${server_ready:-0}" -ne 1 ]; then
+            echo "Server did not start in time" >&2
+            exit 1
+          fi
 
-      - name: Stop server
-        run: pkill -f "dist/server.js"
-        if: always()
+          pnpm smoke:discovery
