--- a/.github/workflows/discovery-smoke.yml
+++ b/.github/workflows/discovery-smoke.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Build native extensions
+        run: pnpm rebuild better-sqlite3
+
       - name: Run migrations
         run: pnpm auth:migrate
 
@@ -38,24 +41,31 @@ jobs:
           set -euo pipefail
 
           node dist/server.js &
-          server_pid=$!
-          trap "kill $server_pid >/dev/null 2>&1 || true" EXIT
+          SERVER_PID=$!
+          trap "kill $SERVER_PID >/dev/null 2>&1 || true" EXIT
 
-          for i in {1..30}; do
+          server_ready=0
+          for _ in {1..30}; do
             if curl -sf "${BETTER_AUTH_URL}/healthz" >/dev/null; then
               server_ready=1
               break
             fi
-            if ! kill -0 "$server_pid" 2>/dev/null; then
+
+            if ! kill -0 "$SERVER_PID" 2>/dev/null; then
               echo "Server process exited before becoming healthy" >&2
               exit 1
             fi
+
             sleep 1
           done
 
-          if [ "${server_ready:-0}" -ne 1 ]; then
+          if [ "$server_ready" -ne 1 ]; then
             echo "Server did not start in time" >&2
             exit 1
           fi
 
           pnpm smoke:discovery
+
+          kill "$SERVER_PID"
+          wait "$SERVER_PID" 2>/dev/null || true
+          trap - EXIT
