feat: allow node sqlite driver for ci

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=http://localhost:3000
 PORT=3000
+BETTER_AUTH_DB_DRIVER=better-sqlite3
 
 # Google OAuth credentials
 GOOGLE_CLIENT_ID=
