feat: harden mcp login and consent flow

--- a/docs/project-scan-report.json
+++ b/docs/project-scan-report.json
@@ -2,7 +2,7 @@
   "workflow_version": "1.2.0",
   "timestamps": {
     "started": "2025-10-16T21:56:54.769750Z",
-    "last_updated": "2025-10-16T22:46:10.403399+00:00",
+    "last_updated": "2025-10-17T01:23:35.866737+00:00",
     "completed": "2025-10-16T22:46:10.403403+00:00"
   },
   "mode": "initial_scan",
@@ -87,9 +87,20 @@
       "status": "completed",
       "timestamp": "2025-10-16T22:46:10.403387+00:00",
       "summary": "Workflow complete"
+    },
+    {
+      "step": "product_brief_context",
+      "status": "logged",
+      "summary": "Initial context captured for todo-app integration product brief"
+    },
+    {
+      "step": "product_brief",
+      "status": "completed",
+      "timestamp": "2025-10-17T01:23:12.292375+00:00",
+      "summary": "Product brief generated for todo-app integration"
     }
   ],
-  "current_step": "completed",
+  "current_step": "product_brief_complete",
   "findings": {
     "project_classification": {
       "repository_type": "monolith",
@@ -128,7 +139,8 @@
     "development-guide.md",
     "api-contracts.md",
     "data-models.md",
-    "index.md"
+    "index.md",
+    "product-brief-todo-app-integration-2025-10-16.md"
   ],
   "resume_instructions": "Starting from step 1",
   "project_types": [
