--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-# Server configuration
+# Server configuration (copy to .env and replace placeholders)
 BETTER_AUTH_SECRET=
-BETTER_AUTH_URL=http://localhost:3000
+BETTER_AUTH_URL=https://your-auth-domain.example.com
 PORT=3000
 BETTER_AUTH_DB_DRIVER=better-sqlite3
+BETTER_AUTH_TRUSTED_ORIGINS=https://your-app-domain.example.com,http://localhost:5173
 
 # Google OAuth credentials
 GOOGLE_CLIENT_ID=
@@ -11,4 +12,4 @@ GOOGLE_CLIENT_SECRET=
 # OIDC / MCP configuration
 OIDC_LOGIN_PATH=/login
 OIDC_CONSENT_PATH=/consent
-MCP_RESOURCE=http://localhost:3000
+MCP_RESOURCE=https://your-auth-domain.example.com
