--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
   "dependencies": {
     "better-auth": "^1.3.27",
     "better-sqlite3": "^12.4.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0"
   },
   "devDependencies": {
     "@better-auth/cli": "^1.3.27",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.1",
     "@types/supertest": "^6.0.3",
