fix: address review feedback

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 # Server configuration (copy to .env and replace placeholders)
+BETTER_AUTH_DB_DRIVER=better-sqlite3
 BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=https://your-auth-domain.example.com
-PORT=3000
-BETTER_AUTH_DB_DRIVER=better-sqlite3
 BETTER_AUTH_TRUSTED_ORIGINS=https://your-app-domain.example.com,http://localhost:5173
+# Use the registrable parent domain (for example, .onemainarmy.com) so cookies reach sibling subdomains in production HTTPS deployments.
+BETTER_AUTH_COOKIE_DOMAIN=.your-base-domain.example.com
+PORT=3000
 
 # Google OAuth credentials
 GOOGLE_CLIENT_ID=
