--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "better-sqlite3": "^12.4.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "tldts": "^7.0.17"
   },
   "devDependencies": {
     "@better-auth/cli": "^1.3.27",
