fix: incorporate review feedback on origins and discovery

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ BETTER_AUTH_TRUSTED_ORIGINS=https://your-app-domain.example.com,http://localhost
 BETTER_AUTH_COOKIE_DOMAIN=.your-base-domain.example.com
 PORT=3000
 
+# Optional discovery smoke configuration
+DISCOVERY_TIMEOUT_MS=10000
+
 # Google OAuth credentials
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
