--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,11 @@ GOOGLE_CLIENT_SECRET=
 OIDC_LOGIN_PATH=/login
 OIDC_CONSENT_PATH=/consent
 MCP_RESOURCE=https://your-auth-domain.example.com
+# Comma or space separated scopes applied when clients omit explicit scopes.
+MCP_DEFAULT_SCOPES=openid profile
+# JSON array describing MCP clients; keep empty brackets to start with no registry entries.
+MCP_CLIENTS=[]
+# Require client scopes to be present in the union of MCP_DEFAULT_SCOPES and MCP_CLIENTS scopes.
+MCP_ENFORCE_SCOPE_ALIGNMENT=true
+# Optional: shared secret used by the MCP compliance harness when invoking token/introspection endpoints.
+MCP_COMPLIANCE_CLIENT_SECRET=
