--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "auth:generate": "pnpm exec cli generate",
     "auth:migrate": "pnpm exec cli migrate",
     "smoke:discovery": "node scripts/check-discovery.mjs",
+    "mcp:compliance": "node scripts/mcp-compliance.mjs",
+    "mcp:register": "node scripts/mcp-compliance.mjs --register",
     "pretest": "pnpm run build",
     "test": "node --test",
     "pretest:watch": "pnpm run build",
@@ -32,12 +34,15 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "tldts": "^7.0.17"
+    "node-fetch": "^3.3.2",
+    "tldts": "^7.0.17",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@better-auth/cli": "^1.3.27",
     "@types/better-sqlite3": "^7.6.13",
     "@types/cors": "^2.8.19",
+    "@sinclair/typebox": "^0.32.35",
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.1",
     "@types/supertest": "^6.0.3",
