fix: address MCP review feedback

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,8 @@ GOOGLE_CLIENT_SECRET=
 # OIDC / MCP configuration
 OIDC_LOGIN_PATH=/login
 OIDC_CONSENT_PATH=/consent
+# Set to true only when you explicitly need to support dynamic client registration.
+OIDC_DYNAMIC_REGISTRATION=false
 MCP_RESOURCE=https://your-auth-domain.example.com
 # Comma or space separated scopes applied when clients omit explicit scopes.
 MCP_DEFAULT_SCOPES=openid profile
