--- a/docs/sprint-status.yaml
+++ b/docs/sprint-status.yaml
@@ -40,4 +40,6 @@ development_status:
   1-1-establish-mcp-registry-and-metadata: done
   1-2-align-oauth-mcp-session-endpoints: done
   1-3-automate-mcp-compliance-verification: done
+  1-4-enforce-mcp-compliance-checks-in-ci: done
+  1-5-publish-mcp-onboarding-runbook: ready-for-dev
   epic-1-retrospective: completed
