--- a/.github/workflows/discovery-smoke.yml
+++ b/.github/workflows/discovery-smoke.yml
@@ -20,18 +20,30 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Enable pnpm via corepack
+        run: corepack enable pnpm
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '22'
           check-latest: true
-          cache: 'pnpm'
-          cache-dependency-path: pnpm-lock.yaml
 
-      - name: Set up pnpm
-        uses: pnpm/action-setup@v4
+      - name: Determine pnpm store
+        id: pnpm-store
+        run: |
+          STORE_PATH=$(pnpm store path --silent)
+          echo "store=$STORE_PATH" >> "$GITHUB_OUTPUT"
+          echo "PNPM_STORE_PATH=$STORE_PATH" >> "$GITHUB_ENV"
+          mkdir -p "$STORE_PATH"
+
+      - name: Restore pnpm store cache
+        uses: actions/cache@v4
         with:
-          run_install: false
+          path: ${{ steps.pnpm-store.outputs.store }}
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
 
       - name: Restore build artifacts
         id: restore-dist
@@ -102,18 +114,30 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Enable pnpm via corepack
+        run: corepack enable pnpm
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '22'
           check-latest: true
-          cache: 'pnpm'
-          cache-dependency-path: pnpm-lock.yaml
 
-      - name: Set up pnpm
-        uses: pnpm/action-setup@v4
+      - name: Determine pnpm store
+        id: pnpm-store
+        run: |
+          STORE_PATH=$(pnpm store path --silent)
+          echo "store=$STORE_PATH" >> "$GITHUB_OUTPUT"
+          echo "PNPM_STORE_PATH=$STORE_PATH" >> "$GITHUB_ENV"
+          mkdir -p "$STORE_PATH"
+
+      - name: Restore pnpm store cache
+        uses: actions/cache@v4
         with:
-          run_install: false
+          path: ${{ steps.pnpm-store.outputs.store }}
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
 
       - name: Restore build artifacts
         id: compliance-dist
