--- a/docs/sprint-status.yaml
+++ b/docs/sprint-status.yaml
@@ -41,5 +41,5 @@ development_status:
   1-2-align-oauth-mcp-session-endpoints: done
   1-3-automate-mcp-compliance-verification: done
   1-4-enforce-mcp-compliance-checks-in-ci: done
-  1-5-publish-mcp-onboarding-runbook: ready-for-dev
+  1-5-publish-mcp-onboarding-runbook: done
   epic-1-retrospective: completed
